apps/opscotch/opscotch-github-pr-updater/1.7/README.md
# GitHub PR Updater

Reusable Opscotch app for pull-request mutation operations through deployment-access calls.

# Versions

## 1.7
- Send update error metrics with the timestamp sendMetric overload so a metric emit cannot stop the processor

## 1.6
- Emit GitHub update error metrics

## 1.5
- Emit GitHub update activity metrics via community `3.1.8`

## Callable step IDs

- `github-pr-create` (`operation` fixed to `create-pr`)
- `github-pr-update` (`operation` fixed to `update-pr`)
- `github-pr-request-reviewers` (`operation` fixed to `request-reviewers`)

## Public input contract

Call purpose by step:
- `github-pr-create`: creates a pull request in the target repository.
- `github-pr-update`: updates mutable pull request fields (for example title/body/base/state/draft).
- `github-pr-request-reviewers`: requests reviewers on an existing pull request.

The following schema is the public contract callers must satisfy for all callable step IDs above.

```json
{
  "type": "object",
  "required": ["repo", "issue"],
  "additionalProperties": true,
  "properties": {
    "repo": { "type": "string", "description": "GitHub repository in owner/repo format." },
    "issue": { "oneOf": [{ "type": "number" }, { "type": "string" }], "description": "Issue number context." },
    "head": { "type": "string", "description": "Used by create-pr." },
    "pull_number": { "oneOf": [{ "type": "number" }, { "type": "string" }], "description": "Required for update-pr/request-reviewers." }
  }
}
```

Operation-specific fields (`title`, `base`, `body`, `draft`, `reviewers`) are validated at runtime for each operation.

## Bootstrap usage example

```json
[
  {
    "deploymentId": "github-pr-updater",
    "remoteConfiguration": "workflow.json",
    "frequency": 0,
    "allowExternalHostAccess": [
      {
        "id": "github-api-auth",
        "host": "https://api.github.com",
        "authenticationHost": true,
        "data": {
          "githubToken": "REPLACE_ME_WITH_GH_TOKEN"
        }
      },
      {
        "id": "github-api",
        "host": "https://api.github.com",
        "httpTimeout": 15000,
        "allowList": [
          { "method": "GET", "uriPattern": "/repos/.+/pulls.*" },
          { "method": "POST", "uriPattern": "/repos/.+/pulls$" },
          { "method": "PATCH", "uriPattern": "/repos/.+/pulls/.+" },
          { "method": "POST", "uriPattern": "/repos/.+/pulls/.+/requested_reviewers" }
        ]
      }
    ],
    "allowDeploymentAccess": [
      { "id": "github-issue-updater-callers-pr", "deploymentId": "REPLACE_PR_ACTIONS_DEPLOYMENT_ID", "access": "receive" },
      { "id": "github-pr-updater-callers", "deploymentId": "REPLACE_CALLER_DEPLOYMENT_ID", "access": "receive" }
    ],
    "data": {
      "githubAuthHostId": "github-api-auth",
      "hostId": "github-api"
    }
  }
]
```

## Notes

- `github-issue-updater-callers-pr` is included for compatibility with combined issue/PR action deployments.
- Access errors usually indicate caller `allowDeploymentAccess` does not match the receiver id used for the step.

## Release Links

- Release: https://github.com/opscotch/opscotch-apps/releases/tag/opscotch-github-pr-updater-1.7
- Docker Image: `ghcr.io/opscotch/opscotch-github-pr-updater:1.7`
- Catalog: https://github.com/opscotch/opscotch-apps/blob/main/apps/opscotch/opscotch-github-pr-updater/1.7/README.md

To use this as a docker image, here is an example Dockerfile:

```Dockerfile
FROM ghcr.io/opscotch/opscotch-github-pr-updater:1.7 AS opscotch-github-pr-updater
FROM ghcr.io/opscotch/opscotch-agent:latest

COPY --from=opscotch-github-pr-updater /apps/opscotch-github-pr-updater.oapp /apps/opscotch-github-pr-updater

# your custom bootstrap
COPY bootstrap.json /config/bootstrap.json
```

## Signing Public Keys

| Key ID | Public Key |
| --- | --- |
| `opscotch-app` | `8C9AED01FF5E6695E4464E754697F22D653A9FB35E1233627D81D91F89CF2874` |
| `opscotch-github-pr-updater-app` | `DB78E5362EBBAB2CC8CC62CCEE3671B09204B988000DAA76900DD095E973230E` |
| `opscotch-github-pr-updater-1.x` | `64D8AF41E86E8F22A924C2003158C7B943557D9FF7D4147372FEAB25690B4FC1` |

## Verify Artifact

Download `opscotch-github-pr-updater.oapp`, `opscotch-github-pr-updater.oapp.sig`, and `opscotch-github-pr-updater.oapp.pem` from the release, then run:

```bash
cosign verify-blob \
  --signature opscotch-github-pr-updater.oapp.sig \
  --certificate opscotch-github-pr-updater.oapp.pem \
  --certificate-identity-regexp '^https://github.com/opscotch/builder/.github/workflows/app-release.yml@refs/(heads|tags)/.+$' \
  --certificate-oidc-issuer https://token.actions.githubusercontent.com \
  opscotch-github-pr-updater.oapp
```
